# Feedback_processor_ver

./: .gitignore  .vercelignore  Procfile  app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
templates/: files.html  index.html
