[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-processor"
version = "1.0.0"
description = "Student Feedback Processing System"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "Werkzeug>=3.0.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0"
]